# maize

./: .gitignore  Cargo.toml  circle_algos.txt
benches/: octs.rs  rect.rs
src/: algo.rs  drawing.rs  edges.rs  error.rs  graphs.rs  lib.rs  render.rs  util.rs
src/algo/: dist.rs  hk.rs  path.rs
src/bak/: midpt_circle.rs
src/drawing/: cir.rs  octs.rs  pt.rs  quad.rs  torus.rs  wu.rs
src/graphs/: orth.rs  weight.rs
src/graphs/orth/: nodes.rs
src/graphs/orth/nodes/: rect.rs
src/render/: opts.rs  path.rs  state.rs
src/render/opts/: anim.rs  blend.rs  dist.rs  path.rs
src/render/state/: anim.rs  dist.rs  graph.rs  path.rs
src/render/state/graph/: builder.rs
