[package]
name = "maize"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
lazy_static = "1.4.0"
rusttype = "0.9.2"
smallvec = "1.9.0"
thiserror = "1.0.32"
hsl = "0.1.1"
rand = "0.8.5"
arc_drawing = { git = "https://github.com/vishusandy/arc_drawing" }

[dev-dependencies]
imageproc = "0.23.0"
rand_xoshiro = "0.6.0"

# [[bench]]
# name = "arc"
# harness = false
