[package]
name = "maize"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
imageproc = "0.23.0"
freehand = { git = "https://github.com/vishusandy/freehand" }
lazy_static = "1.4.0"
rusttype = "0.9.2"
smallvec = { version = "1.9.0", features = ["const_generics"] }
thiserror = "1.0.32"
rand = "0.8.5"
hsl = "0.1.1"
webp-animation = "0.7.0"

[dev-dependencies]
rand_xoshiro = "0.6.0"
log = "0.4"
env_logger = "0.9"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = 1

[lib]
bench = false

[[bench]]
name = "rect"
harness = false


# [[bench]]
# name = "arc"
# harness = false
